--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 venv/
 *.pyc
 __pycache__/
+data/singlecoil_train/
+data/singlecoil_val/
+data/singlecoil_test/
+data/knee_mri_clinical_seq/
+data/knee_mri_clinical_seq_batch2/
