--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ scikit_image>=0.16.2
 torchvision>=0.8.1
 torch>=1.8
 runstats>=1.8
-pytorch-lightning>=1.4
+pytorch-lightning<=1.9
 h5py>=2.10
 PyYAML>=5.3.1
 torchmetrics>=0.5.1
