Using tensorboard as monitor to fix the add_image bug

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ data/singlecoil_test/
 data/knee_mri_clinical_seq/
 data/knee_mri_clinical_seq_batch2/
 logs/
+lightning_logs/
 .vscode/
 .annotation_cache/
