Including the unet_roi trained model

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,14 @@ lightning_logs/
 
 logs/unet/*
 !logs/unet/unet_l1/
+!logs/unet/unet_roi/
 
 logs/unet/unet_l1/*
+logs/unet/unet_roi/*
 !logs/unet/unet_l1/checkpoints/
+!logs/unet/unet_roi/checkpoints/
 
 logs/unet/unet_l1/checkpoints/*
+logs/unet/unet_roi/checkpoints/*
 !logs/unet/unet_l1/checkpoints/epoch=9-step=347420.ckpt
+!logs/unet/unet_roi/checkpoints/epoch=9-step=347420.ckpt
