--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pandas>=1.3.4",
     "pytest>=8.3.5",
     "pytorch-lightning<=1.9",
+    "pywrap>=0.1.0",
     "pyyaml>=5.3.1",
     "requests>=2.32.3",
     "runstats>=1.8",
