--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ dependencies = [
     "ipykernel>=6.29.5",
     "ipython>=9.0.2",
     "jupyter>=1.1.1",
+    "lightning>=2.5.1",
     "line-profiler>=4.2.0",
     "loguru>=0.7.3",
     "matplotlib>=3.10.1",
     "numpy>=1.18.5",
     "pandas>=1.3.4",
     "pytest>=8.3.5",
-    "pytorch-lightning<=1.9",
     "pywrap>=0.1.0",
     "pyyaml>=5.3.1",
     "requests>=2.32.3",
