--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "requests>=2.32.3",
     "runstats>=1.8",
     "scikit-image>=0.16.2",
+    "seaborn>=0.13.2",
     "standard-imghdr>=3.13.0",
     "tensorboard>=2.19.0",
     "tensorboard-plugin-profile>=2.19.0",
